--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h1>About</h1>
               <img src="assets/profilePic.JPG" alt="placeholder" style="width: 500px;">
               <p>I am an in-training full stack developer, studying at The University of Sydney. I am well versed and skilled in the design aspects of web design, as well as proficient in Javascript, Jquery and Node.js.</p>
-              <a href="resume.pdf">My Resume</a>
+              <a href="assets/resume.pdf">My Resume</a>
             </section>
           </div>
           <footer id="footer"></footer>
