--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>Caitlin Mulcahy - Portfolio (Projects)</title>
+        <title>Caitlin Mulcahy - Portfolio</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -24,9 +24,6 @@
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Contact.html">Contact</a>
                 </li>
               </ul>
               <br>
@@ -74,6 +71,30 @@
                   <div class="card-body">
                     <a href="https://caitlinmaxx.github.io/Homework-6.0/" class="card-link">Website</a>
                     <a href="https://github.com/CaitlinMaxx/Homework-6.0" class="card-link">Github Repository</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm project">
+                <div class="card" style="width: 30rem;">
+                  
+                  <img src="assets/TeamProfileGenerator2.png" class="card-img-top" alt="screenshot of app">
+                  <div class="card-body">
+                    <h5 class="card-title">Team Profile Generator</h5>
+                  </div>
+                  <div class="card-body ">
+                    <a href="https://github.com/CaitlinMaxx/10.0-Homework" class="card-link">Github Repository</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm project">
+                <div class="card" style="width: 30rem;">
+                  <img src="assets/LinkedOut.png" class="card-img-top" alt="screenshot of app">
+                  <div class="card-body">
+                    <h5 class="card-title">Linked Out</h5>
+                  </div>
+                  <div class="card-body ">
+                    <a href=" https://fierce-thicket-56137.herokuapp.com/" class="card-link">Website</a>
+                    <a href="https://github.com/Matt-STJR/LinkedOut" class="card-link">Github Repository</a>
                   </div>
                 </div>
               </div>
