--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-      <title>Caitlin Mulcahy - Portfolio (About)</title>
+      <title>Caitlin Mulcahy</title>
       
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -25,10 +25,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="Portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Contact.html">Contact</a>
-                  </li>
+                  </li> 
                 </ul>
                 <br>
               <a href="https://www.linkedin.com/in/caitlin-mulcahy-a4312b1a1/">
